# mystic-server

./: .env  .gitignore  Cargo.toml  Procfile  README.md
db/: Cargo.toml  sample-data.csv
db/migrations/2019-06-12-000158_create_goal_areas/: down.sql  up.sql
db/migrations/2019-06-12-001031_create_tags/: up.sql
db/migrations/2019-06-16-214148_create_objectives/: down.sql
db/migrations/2019-07-05-182236_add_full_text_search_to_tags/: down.sql  up.sql
db/migrations/2019-07-05-183832_backfill_tags_ts_name/: down.sql  up.sql
db/migrations/2019-07-05-185335_create_objectives_tags/: up.sql
db/migrations/2019-07-05-235523_create_objectives_goal_areas/: down.sql  up.sql
db/migrations/2019-08-27-233701_add_unique_indexes_to_obj_tags_obj_goals/: down.sql  up.sql
db/migrations/2019-11-16-163456_revise_client_name_format_string/: down.sql  up.sql
db/migrations/2019-11-17-220015_reset_tables/: up.sql
db/migrations/2019-11-17-220051_insert_goal_areas/: down.sql  up.sql
db/migrations/2019-11-17-220327_insert_objectives/: down.sql  up.sql
db/migrations/2019-11-17-223606_insert_objectives_goal_areas/: down.sql  up.sql
db/src/: lib.rs  models.rs  schema.patch  schema.rs  types.rs
graphql/: Cargo.toml
graphql/src/: lib.rs
migrations/2019-06-16-214148_create_objectives/: up.sql
migrations/2019-07-05-182236_add_full_text_search_to_tags/: up.sql
migrations/2019-07-05-185335_create_objectives_tags/: down.sql
src/: full_text_search.rs  main.rs  models.rs  schema.rs
web/: Cargo.toml
web/src/: main.rs
web/templates/: home.hbs  objectives.hbs  search.hbs
(+2 files in other folders)
