[package]
name = "web"
version = "0.1.0"
authors = ["Stephen Karger <stephen.karger@gmail.com>"]
edition = "2018"

[dependencies]
db = { path = "../db" }
actix-web = "1.0.0"
diesel = { version = "1.4.2", features = ["postgres"] }
dotenv = "0.14.1"
env_logger = "0.6"
handlebars = "2.0.0"
listenfd = "0.3"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
